kubernetes/infrastructure/network-policy/worker-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-services-network-policy
  namespace: application-namespace
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: worker
       
      ports:
        - protocol: TCP
          port: 8081

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-services-network-policy
  namespace: application-namespace
spec:
  podSelector:
    matchLabels:
      app: inventory-service
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: worker
       
      ports:
        - protocol: TCP
          port: 8082

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-services-network-policy
  namespace: application-namespace
spec:
  podSelector:
    matchLabels:
      app: payment-service
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: worker
       
      ports:
        - protocol: TCP
          port: 8083

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-services-network-policy
  namespace: application-namespace
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: worker
       
      ports:
        - protocol: TCP
          port: 8084

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-to-services-network-policy
  namespace: application-namespace
spec:
  podSelector:
    matchLabels:
      app: shipping-service
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: worker
       
      ports:
        - protocol: TCP
          port: 8085
